--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,6 +8,19 @@
     </h:head>
     <h:body>
 
+        <f:view>
+
+
+            <h:form>
+                <h1><h:outputText value="Create/Edit"/></h1>
+                <h:panelGrid columns="2">
+                    
+                    <h:outputLabel value="NombreCategoria:" for="nombreCategoria" />
+                    <h:inputText id="nombreCategoria" value="#{categoriaManagedBean.categoria.nombreCategoria}" title="NombreCategoria" required="true" requiredMessage="The NombreCategoria field is required."/>
+                </h:panelGrid>
+                <h:commandButton value="Registrar Categotia" action="#{categoriaManagedBean.registrarCategoria()}"/>
+            </h:form>
+        </f:view>
 
     </h:body>
 </html>
