hola  en el index

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,7 +9,7 @@
             <link href="recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
             <link href="recursos/css/font-awesome.css" rel="stylesheet" type="text/css"/>
             <link href="recursos/css/iniciopagina.css" rel="stylesheet" type="text/css"/>
-            
+            hola
     </head>
     <body>
        <center>
