--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,7 +9,6 @@
             <link href="recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
             <link href="recursos/css/font-awesome.css" rel="stylesheet" type="text/css"/>
             <link href="recursos/css/iniciopagina.css" rel="stylesheet" type="text/css"/>
-            hola
     </head>
     <body>
        <center>
@@ -20,10 +19,10 @@
 	<div class="espacio"></div>
 	<center>
 		<div class="col-md-2 col-sm-5 text-center fh5co-link-wrap">
-			<p><a href="index.html" class="btn btn-outline  btn-warning">Español</a></p>
+			<p><a href="#" class="btn btn-outline  btn-warning">Español</a></p>
 		</div>
 		<div class="col-md-2 col-md-push-7 ">
-			<p><a href="indexEnglish.html" class="btn btn-outline  btn-danger">Ingles</a></p>
+			<p><a href="#" class="btn btn-outline  btn-danger">Ingles</a></p>
 		</div>
 	</center>
     </body>
