--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -17,7 +17,7 @@ and open the template in the editor.
             <div class="col-lg-12">
                 <div class="container">          	 
                     <div class="col-lg-4"></div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-8">
                         <div class="row grids text-center">
                             <div class="view view-tenth">
                                 <!--  <a href="single.html">-->
@@ -26,7 +26,7 @@ and open the template in the editor.
                                         <img src="recursos/images/paginainicio/Logo.png" class="img-responsive" alt="" style="margin:0% auto;"/>
                                     </div>
                                     <div class="label-product">
-                                        <span class="new">Iniciar Session</span> 
+                                        <span class="new">Iniciar Sesion</span> 
                                     </div>
                                     <div class="mask" style="width:100% !important;">
                                         <h2>Bienvenido Señor Usuario</h2>
