--- a/web/paginaprincipal.xhtml
+++ b/web/paginaprincipal.xhtml
@@ -5,26 +5,29 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
         <title>Sistema Fútbol Web</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="shortcut icon" href="recursos/images/paginainicio/logourl.jpg" type="image/x-icon"/>
         <link href="recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="recursos/css/font-awesome.css" rel="stylesheet" type="text/css"/>
         <link href="recursos/css/computador.css" rel="stylesheet" type="text/css"/>
-        <link href="recursos/css/index.css" rel="stylesheet" type="text/css"/>
         <link href="recursos/css/buscarpagina.css" rel="stylesheet" type="text/css"/>
         <link href="recursos/css/Botones.css" rel="stylesheet" type="text/css"/>
         <link href="recursos/css/carrousel.css" rel="stylesheet" type="text/css"/>
         
+        
+        <h:outputStylesheet library="css" name="index.css"/>
 
         <script src="recursos/js/jquery.min.js" type="text/javascript"></script>
         <script src="recursos/js/index.js" type="text/javascript"></script>
 
 
 
-    </head>
+    </h:head>
     <body>
 
 
