--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -9,8 +9,8 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="recursos/css/login.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/login.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div class="main" style="padding:2%;margin-top:5%;">        	
@@ -23,7 +23,7 @@ and open the template in the editor.
                                 <!--  <a href="single.html">-->
                                 <div class="inner_content clearfix">
                                     <div class="product_image">
-                                        <img src="recursos/images/paginainicio/Logo.png" class="img-responsive" alt="" style="margin:0% auto;"/>
+                                        <img src="resources/images/paginainicio/Logo.png" class="img-responsive" alt="" style="margin:0% auto;"/>
                                     </div>
                                     <div class="label-product">
                                         <span class="new">Iniciar Sesion</span> 
