--- a/web/registrousuarioaj.xhtml
+++ b/web/registrousuarioaj.xhtml
@@ -4,13 +4,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
-        <link href="recursos/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="recursos/css/registrousuarios.css" rel="stylesheet" type="text/css"/>
-        <link href="recursos/css/font-awesome.css" rel="stylesheet" type="text/css"/>
-        <link href="recursos/css/cards.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/registrousuarios.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/cards.css" rel="stylesheet" type="text/css"/>
 
-        <script src="recursos/js/jquery.js" type="text/javascript"></script>
-        <script src="recursos/js/registrousuario.js" type="text/javascript"></script>
+        <script src="resources/js/jquery.js" type="text/javascript"></script>
+        <script src="resources/js/registrousuario.js" type="text/javascript"></script>
     </h:head>
     <h:body>
         <div class="container">
@@ -323,8 +323,8 @@
             </div>
         </div>
 
-        <script src="recursos/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="recursos/js/bootstrap.js" type="text/javascript"></script>
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resources/js/bootstrap.js" type="text/javascript"></script>
     </h:body>
 </html>
 
